--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
-name = "template-rust-devcontainer"
+name = "poc_cockroach"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# openssl = "0.10.41"
+# postgres-openssl = "0.5.0"
+# chrono = "0.4.22"
+# postgres = { version = "0.19.3", features = ["with-uuid-1"] }
+# uuid = "1.1.2"
+
+diesel = { version = "2.1.6", features = ["postgres", "uuid"] }
+dotenv = "0.15.0"
+uuid = { version = "1.8.0", features = ["serde", "v4"] }
